# pymetrius

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  requirements.txt
.github/workflows/: integration_test.yaml
hooks/: post_gen_project.py  pre_gen_project.py  requirements.txt
tests/: config.yaml  integration_test.sh
{{cookiecutter.project_name}}/: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README-dev.md  README.md  azure-pipelines.yml  config.json  config.py  dependencies.toml  docker_build_and_run.sh  project_config.toml  pyproject.toml  requirements-coverage.txt  requirements-dev.txt  requirements-docs.txt  requirements-linting.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: common_steps.yml  lint_and_docs.yaml  publish.yaml  pytest.yml  tox-addition.yaml  tox.yaml  windows_mac_test.yml
{{cookiecutter.project_name}}/build_scripts/: build-coverage-report.sh  build-docs.sh  build-linting-report.sh  release-version.sh  run-all-tests-with-coverage.sh  run_pylint.py  update_docs.py
{{cookiecutter.project_name}}/data/: .gitignore
{{cookiecutter.project_name}}/data/raw/: .gitignore
{{cookiecutter.project_name}}/docs/: .gitignore  _config.yml  autogen_rst.py  bibtex.json  conf.py  getting-started.rst  index.rst  refs.bib  spelling_wordlist.txt
{{cookiecutter.project_name}}/docs/01_tutorials/: 00_example.rst
{{cookiecutter.project_name}}/docs/02_notebooks/: 00_intro.md  01_library_example.ipynb  02_config_example.ipynb  config_example.ipynb  library_example.ipynb
{{cookiecutter.project_name}}/docs/04_contributing/: 04_contributing.rst
{{cookiecutter.project_name}}/docs/_static/css/: style.css
{{cookiecutter.project_name}}/docs/{{cookiecutter.project_name}}/: index.rst  sample_module.rst  sample_package.rst
{{cookiecutter.project_name}}/docs/{{cookiecutter.project_name}}/sample_package/: sample_module.rst
{{cookiecutter.project_name}}/notebooks/: config_example.ipynb  example.ipynb  library_example.ipynb  test_notebooks.py
{{cookiecutter.project_name}}/public/: index.html
{{cookiecutter.project_name}}/scripts/: run_sample.py  update_docs.py  utils.py
{{cookiecutter.project_name}}/src/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/sample_package/: sample_module.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: sample_module.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/sample_package/: sample_module.py
{{cookiecutter.project_name}}/test/{{cookiecutter.project_name}}/: test_lazy_fixture_demonstration.py  test_sample_class.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/: test_SampleClass.py  test_sample_class.py
